--- a/module_2/assignment1.html
+++ b/module_2/assignment1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<LINK REL=StyleSheet HREF="style.css" TYPE="text/css" MEDIA=screen>
+<LINK REL=StyleSheet HREF="test.css" TYPE="text/css" MEDIA=screen>
 <title>Responsive Layout</title>
 
 </head>
